<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:id="@+id/baseLayout"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="@dimen/textSizeXB"
                />
            <Button
                android:id="@+id/saveItemIntentBtn"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:text="@string/done"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_gravity="center"

                />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/buy_r" />

                <EditText
                    android:id="@+id/buyR"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/shipping_rmb" />

                <EditText
                    android:id="@+id/shippingR"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/other_rmb" />

                <EditText
                    android:id="@+id/otherR"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/agent_rmb" />

                <EditText
                    android:id="@+id/agentR"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"
                   />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/profit_r" />

                <EditText
                    android:id="@+id/profitR"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/shipping_yc" />

                <EditText
                    android:id="@+id/shippingYC"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/other_yc" />

                <EditText
                    android:id="@+id/otherYC"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:textAlignment="center"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/rate" />

                <EditText
                    android:id="@+id/rate"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:importantForAutofill="no"
                    android:hint="@string/zero_p"
                    android:labelFor="@id/rate"
                    android:textAlignment="center"
                />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/analyze"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analyze"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/sellPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="@string/selling_price"
        android:textSize="20sp"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/advert"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        />

    </LinearLayout>
    </RelativeLayout>
</ScrollView>